--- a/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.html.erb
+++ b/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.html.erb
@@ -1,7 +1,7 @@
 <%= render component_tag(x: {data: "statusBarItem"}, data: {theme: theme}, class: {"with-panel": panel?}) do %>
   <sl-dropdown distance="12" skidding="0">
     <div class="status-bar-item-summary" slot="trigger">
-      <sl-icon name="<%= icon %>"></sl-icon>
+      <%= lookbook_icon icon %>
       <% if label.present? %>
         <span><%= label %></span>
       <% end %>
