--- a/app/components/lookbook/ui/elements/icon/icon.html.erb
+++ b/app/components/lookbook/ui/elements/icon/icon.html.erb
@@ -1,3 +1,3 @@
-<%= render component_tag(:i, x: {data: "icon"}) do %>
+<%= render component_tag(:i, x: {data: "icon"}, class: "icon") do %>
   <%= svg %>
 <% end %>
