--- a/app/components/lookbook/ui/elements/nav_tree/nav_tree_item/nav_tree_item.css
+++ b/app/components/lookbook/ui/elements/nav_tree/nav_tree_item/nav_tree_item.css
@@ -1,2 +1,6 @@
 [data-component="nav-tree-item"] {
+  .icon {
+    margin-right: var(--lookbook-spacing-x-small);
+    height: var(--lookbook-spacing-medium);
+  }
 }
