--- a/app/components/lookbook/ui/elements/nav_tree/nav_tree_item/nav_tree_item.html.erb
+++ b/app/components/lookbook/ui/elements/nav_tree/nav_tree_item/nav_tree_item.html.erb
@@ -8,7 +8,7 @@
     "@click": "itemClicked"
   }
 ) do %>
-  <sl-icon name="<%= icon %>"></sl-icon>
+  <%= lookbook_icon icon %>
   <%= label %>
   <% children&.each do |node| %>
     <%= render Lookbook::UI::NavTreeItem.new(node: node) %>
