--- a/app/components/lookbook/ui/elements/notifications_popup/notifications_popup.css
+++ b/app/components/lookbook/ui/elements/notifications_popup/notifications_popup.css
@@ -16,8 +16,10 @@
     }
 
     .notification-icon {
-      flex: none;
-      font-size: var(--lookbook-font-size-large);
+      .icon {
+        flex: none;
+        width: var(--lookbook-size-large);
+      }
     }
 
     .notification-message {
