--- a/public/lookbook-assets/mailer.css
+++ b/public/lookbook-assets/mailer.css
@@ -790,6 +790,17 @@
   --lookbook-spacing-3x-large: 3rem; /* 48px */
   --lookbook-spacing-4x-large: 4.5rem; /* 72px */
 
+  --lookbook-size-3x-small: 0.125rem; /* 2px */
+  --lookbook-size-2x-small: 0.25rem; /* 4px */
+  --lookbook-size-x-small: 0.5rem; /* 8px */
+  --lookbook-size-small: 0.75rem; /* 12px */
+  --lookbook-size-medium: 1rem; /* 16px */
+  --lookbook-size-large: 1.25rem; /* 20px */
+  --lookbook-size-x-large: 1.75rem; /* 28px */
+  --lookbook-size-2x-large: 2.25rem; /* 36px */
+  --lookbook-size-3x-large: 3rem; /* 48px */
+  --lookbook-size-4x-large: 4.5rem; /* 72px */
+
   /*
    * Typography
    */
