--- a/app/components/lookbook/ui/elements/notifications_popup/notifications_popup.html.erb
+++ b/app/components/lookbook/ui/elements/notifications_popup/notifications_popup.html.erb
@@ -3,7 +3,7 @@
     <% notifications.each do |notification| %>
       <li class="notification notification-<%= notification.type %>">
         <div class="notification-icon">
-          <sl-icon name="<%= icon_name(notification) %>"></sl-icon>
+          <%= lookbook_icon icon_name(notification) %>
         </div>
         <div class="notification-message">
           <%= notification.detail %>
