--- a/app/components/lookbook/ui/app/status_bar/status_bar.html.erb
+++ b/app/components/lookbook/ui/app/status_bar/status_bar.html.erb
@@ -6,14 +6,14 @@
     <% if warnings.any? %>
       <%= lookbook_status_bar_item(label: pluralize(warnings.size, "warning"), theme: :warning) do |item| %>
         <% item.with_panel do %>
-          <%= lookbook_notifications_popup(warnings) %>
+          <%= render Lookbook::UI::StatusBarNotifications.new(notifications: warnings) %>
         <% end %>
       <% end %>
     <% end %>
     <% if errors.any? %>
       <%= lookbook_status_bar_item(label: pluralize(errors.size, "error"), theme: :error) do |item| %>
         <% item.with_panel do %>
-          <%= lookbook_notifications_popup(errors) %>
+          <%= render Lookbook::UI::StatusBarNotifications.new(notifications: errors) %>
         <% end %>
       <% end %>
     <% end %>
