--- a/app/components/lookbook/ui/app/status_bar/status_bar_notifications/status_bar_notifications.html.erb
+++ b/app/components/lookbook/ui/app/status_bar/status_bar_notifications/status_bar_notifications.html.erb
@@ -1,4 +1,4 @@
-<%= render component_tag(x: {data: "notificationsPopup"}) do %>
+<%= render component_tag(x: {data: "statusBarNotifications"}) do %>
   <ul class="notifications-items">
     <% notifications.each do |notification| %>
       <li class="notification notification-<%= notification.type %>">
