--- a/app/components/lookbook/ui/app/preview_inspector/code_panel/code_panel.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/code_panel/code_panel.html.erb
@@ -1,19 +1,3 @@
-<%= lookbook_panel(**args,
-  scrollable: false,
-  x: {
-    data: "codePanel",
-    effect: "codeComponent.wrap = wrapLines"
-  },
-  data: {panel: "code"}
-) do |panel| %>
-  <% panel.with_action do %>
-    <sl-copy-button from="<%= copy_target_id %>"></sl-copy-button>
-  <% end %>
-
-  <% panel.with_action(icon: "wrap-text", tooltip: "Wrap lines", "@click": "wrapLines = !wrapLines") %>
-  
-  <div class="code-panel-code" x-ref="code">
-    <%= lookbook_code(content, lang: lang) %>
-  </div>
-  <pre class="code-panel-raw"><code id="<%= copy_target_id %>"><%= copy_source.to_s %></code></pre>
+<%= lookbook_panel(**args, scrollable: false, x: {data: "codePanel"}, data: {panel: "code"}) do |panel| %>  
+  <%= lookbook_code(content, lang: lang) %>
 <% end %>
