Cleanup components organisation and naming

--- a/app/components/lookbook/ui/app/preview_inspector/params_panel/params_panel.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/params_panel/params_panel.html.erb
@@ -1,4 +1,4 @@
-<%= lookbook_panel(**args, x: {data: "paramsPanel"}, data: {panel: "params"}) do %>
+<%= lb_panel(**args, x: {data: "paramsPanel"}, data: {panel: "params"}) do %>
   <% if editables.any? %>
     <div class="params-panel-table">
       <table>
