--- a/app/components/lookbook/ui/base/viewport/viewport.html.erb
+++ b/app/components/lookbook/ui/base/viewport/viewport.html.erb
@@ -33,7 +33,7 @@
           class="viewport-handle viewport-handle-x"
           @pointerdown="onResizeWidthStart"
           @dblclick="toggleFullWidth">
-          <%= lookbook_icon :grip_vertical, class: "viewport-handle-icon" %>
+          <%= lb_icon :grip_vertical, class: "viewport-handle-icon" %>
         </div>
       <% end %>
       <% if resize_y? %>
@@ -41,7 +41,7 @@
           class="viewport-handle viewport-handle-y"
           @pointerdown="onResizeHeightStart"
           @dblclick="toggleFullHeight">
-          <%= lookbook_icon :grip_horizontal, class: "viewport-handle-icon" %>
+          <%= lb_icon :grip_horizontal, class: "viewport-handle-icon" %>
         </div>
       <% end %>
       <% if resize_y? && resize_x? %>
@@ -49,7 +49,7 @@
           class="viewport-handle viewport-handle-xy"
           x-on:pointerdown="onResizeStart"
           x-on:dblclick="toggleFullSize">
-          <%= lookbook_icon :grip_vertical, class: "viewport-handle-icon" %>
+          <%= lb_icon :grip_vertical, class: "viewport-handle-icon" %>
         </div>
       <% end %>
     </div>
