--- a/app/views/lookbook/inspector/panels/_notes.html.erb
+++ b/app/views/lookbook/inspector/panels/_notes.html.erb
@@ -1,5 +1,5 @@
 
-<%= lookbook_inspector_panel(id: dom_id(@target, :notes_panel), padded: true) do %>
+<%= lb_inspector_panel(id: dom_id(@target, :notes_panel), padded: true) do %>
   <% if @target.scenarios_with_notes.any? %>
   <% @target.scenarios_with_notes do |scenario, notes| %>
   <section style="padding-block: var(--lookbook-spacing-medium); <%= 'border-bottom: 1px solid var(--lookbook-divider-color);' unless scenario == @target.scenarios_with_notes.last %>">
