--- a/app/views/lookbook/inspector/panels/_params.html.erb
+++ b/app/views/lookbook/inspector/panels/_params.html.erb
@@ -1,4 +1,4 @@
-<%= lookbook_inspector_panel(:params, id: dom_id(@target, :params_panel), padded: true) do |panel| %>
+<%= lb_inspector_panel(:params, id: dom_id(@target, :params_panel), padded: true) do |panel| %>
   <% @target.params.each do |param| %>
     <% panel.with_param(
       param: param,
