--- a/app/views/lookbook/previews/show.html.erb
+++ b/app/views/lookbook/previews/show.html.erb
@@ -1,2 +1,7 @@
-<%= lookbook_preview_overview(@preview, @targets) %>
+<%=
+  render Lookbook::UI::PreviewOverview.new(
+    preview:@preview,
+    targets: @targets
+  )
+%>
 
