--- a/app/components/lookbook/ui/app/layout/layout.html.erb
+++ b/app/components/lookbook/ui/app/layout/layout.html.erb
@@ -1,7 +1,6 @@
 <%= render component_tag(
-  id: "app",
   x: {
-    data: "app",
+    data: "layout",
     bind: "bindings.root"
   },
   data: {status_bar: status_bar?.to_json}
@@ -11,9 +10,9 @@
   </header>
   
   <%=
-    lookbook_layout("app-layout", tag: :main, orientation: :vertical) do |body|
+    lb_pane_group("app-main", tag: :main, orientation: :vertical) do |body|
       body.with_pane do
-        lookbook_layout("app-sidebar", orientation: :horizontal) do |sidebar|
+        lb_pane_group("app-sidebar", orientation: :horizontal) do |sidebar|
           sidebar.with_pane("previews-nav") do |pane|
             pane.with_title { config.previews_nav_label }
             pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav-tree:collapse-all', {id: 'previews-nav-tree'})")
