--- a/app/components/lookbook/ui/app/preview_inspector/default_panel/default_panel.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/default_panel/default_panel.html.erb
@@ -1,3 +1,3 @@
-<%= lookbook_panel(**args, x: {data: "defaultPanel"}, data: {panel: "default"}) do %>
+<%= lb_panel(**args, x: {data: "defaultPanel"}, data: {panel: "default"}) do %>
   <%= content %>
 <% end %>
