--- a/app/components/lookbook/ui/app/preview_inspector/prose_panel/prose_panel.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/prose_panel/prose_panel.html.erb
@@ -1,3 +1,3 @@
-<%= lookbook_panel(**args, x: {data: "prosePanel"}, data: {panel: "prose"}) do |panel| %>  
+<%= lb_panel(**args, x: {data: "prosePanel"}, data: {panel: "prose"}) do |panel| %>  
   <%= lookbook_prose(markdown: markdown?) { content } %>
 <% end %>
