--- a/app/components/lookbook/ui/app/preview_overview/preview_overview.html.erb
+++ b/app/components/lookbook/ui/app/preview_overview/preview_overview.html.erb
@@ -1,7 +1,7 @@
 <%= render component_tag(key: id, x: { data: "previewOverview" }) do %>
-  <%= lookbook_pane(id: "#{id}-#{preview.id}-pane") do |pane| %>
+  <%= lb_pane(id: "#{id}-#{preview.id}-pane") do |pane| %>
     <% pane.with_title do %>
-    <%= lookbook_icon :layers, class: "po-title-icon" %>
+    <%= lb_icon :layers, class: "po-title-icon" %>
       <span class="po-title">
         <%= preview.label %>
       </span>
@@ -9,11 +9,11 @@
 
     <div class="po-breadcrumbs">
       <span class="po-breadcrumb"><%= previews_nav_label %></span>
-      <%= lookbook_icon :chevron_right, class: "po-breadcrumb-divider" %>
+      <%= lb_icon :chevron_right, class: "po-breadcrumb-divider" %>
       <% breadcrumbs.each do |node| %>
         <span class="po-breadcrumb"><%= node.label %></span>
         <% unless node == breadcrumbs.last %>
-          <%= lookbook_icon :chevron_right, class: "po-breadcrumb-divider" %>
+          <%= lb_icon :chevron_right, class: "po-breadcrumb-divider" %>
         <% end %>
       <% end %>
     </div>
