--- a/app/components/lookbook/ui/base/pane_group/pane_group.css
+++ b/app/components/lookbook/ui/base/pane_group/pane_group.css
@@ -1,24 +1,24 @@
-[data-component="layout"] {
+[data-component="pane-group"] {
   display: grid;
   width: 100%;
   height: 100%;
 
-  .layout-gutter {
+  .pane-group-gutter {
     position: relative;
   }
 
-  .layout-gutter-handle {
+  .pane-group-gutter-handle {
     position: absolute;
     z-index: 100;
   }
 
   &[data-orientation="horizontal"] {
-    > .layout-gutter {
+    > .pane-group-gutter {
       border-bottom: 1px solid #ccc;
       width: 100%;
       height: 1px;
 
-      .layout-gutter-handle {
+      .pane-group-gutter-handle {
         height: 9px;
         position: absolute;
         top: -4px;
@@ -30,12 +30,12 @@
   }
 
   &[data-orientation="vertical"] {
-    > .layout-gutter {
+    > .pane-group-gutter {
       border-right: 1px solid #ccc;
       height: 100%;
       width: 1px;
 
-      .layout-gutter-handle {
+      .pane-group-gutter-handle {
         width: 9px;
         top: 0;
         bottom: 0;
@@ -45,7 +45,7 @@
     }
   }
 
-  .layout-pane {
+  .pane-group-pane {
     height: 100%;
     width: 100%;
     overflow: hidden;
