--- a/app/components/lookbook/ui/base/pane_group/pane_group.html.erb
+++ b/app/components/lookbook/ui/base/pane_group/pane_group.html.erb
@@ -1,18 +1,18 @@
 <%= render component_tag(
   tag_name,
   x: {
-    data: "layout(#{id.to_json}, {orientation: #{orientation.to_json}})",
+    data: "paneGroup(#{id.to_json}, {orientation: #{orientation.to_json}})",
     effect: "initSplit",
     bind: "bindings.root",
   }) do %>
   <% panes.each do |pane| %>
-    <div class="layout-pane">
+    <div class="pane-group-pane">
       <%= pane %>
     </div>
     
     <% unless pane == panes.last %>
-      <div class="layout-gutter" x-init="registerGutter">
-        <div class="layout-gutter-handle"></div>
+      <div class="pane-group-gutter" x-init="registerGutter">
+        <div class="pane-group-gutter-handle"></div>
       </div>
     <% end %>
   <% end %> 
