--- a/app/views/lookbook/inspector/panels/_source.html.erb
+++ b/app/views/lookbook/inspector/panels/_source.html.erb
@@ -1,4 +1,4 @@
-<%= lookbook_inspector_panel(:code, id: dom_id(@target, :source_panel), lang: @target.source_language, key: @target.source_checksum) do %>
+<%= lb_inspector_panel(:code, id: dom_id(@target, :source_panel), lang: @target.source_language, key: @target.source_checksum) do %>
 <% @target.scenarios.each do |scenario| %>
 <% if @target.scenarios.many? %>
 <%== code_comment(scenario.source_language, scenario.label) %>
