More component reorg

--- a/app/components/lookbook/ui/app/page/page.html.erb
+++ b/app/components/lookbook/ui/app/page/page.html.erb
@@ -7,7 +7,7 @@
 
   <div class="page-body-wrapper page-slat">
     <section class="page-body page-container">
-      <%= lookbook_prose { page.content } %>
+      <%= lb_prose { page.content } %>
     </section>
   </div>
 
