--- a/app/components/lookbook/ui/app/preview_overview/preview_overview.html.erb
+++ b/app/components/lookbook/ui/app/preview_overview/preview_overview.html.erb
@@ -21,7 +21,7 @@
     <div class="po-content">
       <% if preview.notes? %>
         <section class="po-notes">
-          <%= lookbook_prose { preview.notes } %>
+          <%= lb_prose { preview.notes } %>
         </section>
       <% end %>
 
