--- a/app/components/lookbook/ui/app/preview_inspector/code_panel/code_panel.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/code_panel/code_panel.html.erb
@@ -1,3 +1,3 @@
 <%= lb_panel(**args, scrollable: false, x: {data: "codePanel"}, data: {panel: "code"}) do |panel| %>  
-  <%= lookbook_code(content, lang: lang) %>
+  <%= lb_code(content, lang: lang) %>
 <% end %>
