--- a/assets/entrypoints/page.css
+++ b/assets/entrypoints/page.css
@@ -3,4 +3,5 @@
 @import "../css/base.css";
 @import "../css/tooltips.css";
 
-@import-glob "../../app/components/lookbook/ui/shared/**/*.css";
+@import-glob "../../app/components/lookbook/ui/base/{code,prose}/*.css";
+@import-glob "../../app/components/lookbook/ui/app/page/*.css";
