--- a/app/components/lookbook/ui/app/layout/layout.html.erb
+++ b/app/components/lookbook/ui/app/layout/layout.html.erb
@@ -15,12 +15,12 @@
         lb_pane_group("app-sidebar", orientation: :horizontal) do |sidebar|
           sidebar.with_pane("previews-nav") do |pane|
             pane.with_title { config.previews_nav_label }
-            pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav-tree:collapse-all', {id: 'previews-nav-tree'})")
+            pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'previews-nav-tree'})")
             previews_nav
           end
           sidebar.with_pane("pages-nav") do |pane|
             pane.with_title { config.pages_nav_label }
-            pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav-tree:collapse-all', {id: 'pages-nav-tree'})")
+            pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'pages-nav-tree'})")
             pages_nav
           end
         end 
