--- a/app/components/lookbook/ui/elements/nav/nav_item/nav_item.css
+++ b/app/components/lookbook/ui/elements/nav/nav_item/nav_item.css
@@ -13,8 +13,10 @@
 
   .nav-item-toggle {
     width: 32px;
+    flex: none;
 
     button {
+      flex: none;
       width: 32px;
       height: 32px;
     }
