--- a/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
@@ -1,6 +1,10 @@
 <%=
   render component_tag(key: "preview-inspector", x: {data: "previewInspector"}) do
-    lb_pane_group("inspector-panes", orientation: :horizontal) do |layout|
+    lb_pane_group("inspector-panes",
+      orientation: :horizontal,
+      sizes: ["50%", "50%"],
+      min_sizes: [200, 200]
+    ) do |layout|
       layout.with_pane("preview-pane") do |pane|
         pane.with_action(icon: :panel_bottom_open, tooltip: "Open drawer", click: "openDrawer", show: "drawerClosed")
         pane.with_action(icon: :panel_bottom_close, tooltip: "Close drawer", click: "closeDrawer", show: "!drawerClosed")
