Split pane improvements

--- a/app/components/lookbook/ui/app/layout/layout.html.erb
+++ b/app/components/lookbook/ui/app/layout/layout.html.erb
@@ -12,16 +12,18 @@
   <%=
     lb_pane_group("app-main",
       tag: :main,
-      orientation: :vertical,
-      sizes: ["15%", "85%"],
-      min_sizes: [200, 500]
-    ) do |body|
+      opts: {
+        orientation: :vertical,
+        sizes: ["280px", "auto"],
+        min_sizes: [200, 200]
+      }) do |body|
       body.with_pane do
         lb_pane_group("app-sidebar",
+        opts: {
           orientation: :horizontal,
           sizes: ["50%", "50%"],
           min_sizes: [200, 200]
-        ) do |sidebar|
+        }) do |sidebar|
           sidebar.with_pane("previews-nav") do |pane|
             pane.with_title { config.previews_nav_label }
             pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'previews-nav-tree'})")
